fix spacing on selected sort-per-page dropdowns

--- a/app/assets/stylesheets/searchworks4/search-results.css
+++ b/app/assets/stylesheets/searchworks4/search-results.css
@@ -76,6 +76,10 @@
   overflow: hidden;
 }
 
-.active-icon::before {
-  content: "✓";
+.active-icon {
+  margin-left: -20px;
+}
+
+.sort-and-per-page .dropdown-menu {
+  --bs-dropdown-item-padding-x: 1.5rem;
 }
